<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aerospike</groupId>
    <artifactId>Movement</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Movement</name>
    <url>https://aerospike.com/</url>
    <modules>
        <module>cli</module>
        <module>core</module>
        <module>plugin</module>
        <module>extensions</module>
        <module>integration</module>
    </modules>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <distributionManagement>
        <repository>
            <id>local-repository</id>
            <url>${local.repository}</url>
        </repository>
        <snapshotRepository>
            <id>maven-repository</id>
            <url>${local.repository}</url>
        </snapshotRepository>
        <!--        <repository>-->
        <!--            <id>ossrh</id>-->
        <!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
        <!--        </repository>-->
        <!--        <snapshotRepository>-->
        <!--            <id>ossrh</id>-->
        <!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
        <!--        </snapshotRepository>-->
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <junit.version>4.13.1</junit.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <commons-configuration2.version>2.9.0</commons-configuration2.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <tinkerpop.version>3.7.1</tinkerpop.version>
        <local.repository>file:///tmp/maven-repository/</local.repository>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>${commons-configuration2.version}</version>
        </dependency>

    </dependencies>


    <build>
        <directory>${basedir}/target</directory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources
                </directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>${basedir}/src/test/resources
                </directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.target}</release>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <failIfNoTests>true</failIfNoTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <executions>

                    <execution>
                        <id>aggregate-surefire-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>install</phase>
                        <configuration>
                            <aggregate>true</aggregate>
                            <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <!--                    <execution>-->
                    <!--                        <id>sign-artifacts</id>-->
                    <!--                        <phase>verify</phase>-->
                    <!--                        <goals>-->
                    <!--                            <goal>sign</goal>-->
                    <!--                        </goals>-->
                    <!--                        <configuration>-->
                    <!--                            <gpgArguments>-->
                    <!--                                <arg>&#45;&#45;pinentry-mode</arg>-->
                    <!--                                <arg>loopback</arg>-->
                    <!--                            </gpgArguments>-->
                    <!--                        </configuration>-->
                    <!--                    </execution>-->
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
